02-networking/solutions/endpoints-manual.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: manual-endpoint-service
  namespace: default
subsets:
- addresses:
  - ip: 192.168.1.100  # External database IP
  ports:
  - port: 3306
