02-networking/solutions/service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-db
  namespace: default
spec:
  type: ExternalName
  externalName: database.example.com
  ports:
  - port: 3306
    targetPort: 3306
