02-networking/solutions/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-headless
  namespace: default
spec:
  clusterIP: None
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
  selector:
    app: database
