02-networking/solutions/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-lb
  namespace: default
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: web
