02-networking/solutions/service-multi-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-port-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: https
    port: 443
    targetPort: 8443
    protocol: TCP
  selector:
    app: web
