02-networking/solutions/service-no-selector.yaml
apiVersion: v1
kind: Service
metadata:
  name: manual-endpoint-service
  namespace: default
spec:
  ports:
  - port: 3306
    targetPort: 3306
  # No selector - endpoints created manually
