02-networking/solutions/service-session-affinity.yaml
apiVersion: v1
kind: Service
metadata:
  name: sticky-service
  namespace: default
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: web
